test/files/neg/t0764b.check
t0764b.scala:24: error: type mismatch;
 found   : p1.t0764.Node{type T = p1.t0764.<refinement>.type}
 required: p1.t0764.NodeAlias[p1.t0764.NodeAlias[A]]
    (which expands to)  p1.t0764.Node{type T = p1.t0764.Node{type T = A}}
      private[this] def f1 = new Main1(v.prepend)                        // fail
                                         ^
t0764b.scala:25: error: type mismatch;
 found   : p1.t0764.Node{type T = p1.t0764.<refinement>.type}
 required: p1.t0764.NodeAlias[p1.t0764.NodeAlias[A]]
    (which expands to)  p1.t0764.Node{type T = p1.t0764.Node{type T = A}}
      private[this] def f2 = new Main1[NodeAlias[A]](v.prepend)          // fail
                                                       ^
t0764b.scala:26: error: type mismatch;
 found   : p1.t0764.Node{type T = p1.t0764.<refinement>.type}
 required: p1.t0764.NodeAlias[p1.t0764.Node{type T = A}]
    (which expands to)  p1.t0764.Node{type T = p1.t0764.Node{type T = A}}
      private[this] def f3 = new Main1[Node { type T = A }](v.prepend)   // fail
                                                              ^
t0764b.scala:31: error: type mismatch;
 found   : p1.t0764.Node{type T = p1.t0764.<refinement>.type}
 required: p1.t0764.Node{type T = p1.t0764.Node{type T = A}}
      private[this] def f1 = new Main2(v.prepend)                        // fail
                                         ^
t0764b.scala:32: error: type mismatch;
 found   : p1.t0764.Node{type T = p1.t0764.<refinement>.type}
 required: p1.t0764.Node{type T = p1.t0764.NodeAlias[A]}
    (which expands to)  p1.t0764.Node{type T = p1.t0764.Node{type T = A}}
      private[this] def f2 = new Main2[NodeAlias[A]](v.prepend)          // fail
                                                       ^
t0764b.scala:33: error: type mismatch;
 found   : p1.t0764.Node{type T = p1.t0764.<refinement>.type}
 required: p1.t0764.Node{type T = p1.t0764.Node{type T = A}}
      private[this] def f3 = new Main2[Node { type T = A }](v.prepend)   // fail
                                                              ^
t0764b.scala:49: error: type mismatch;
 found   : p2.t0764.Node{type T = p2.t0764.<refinement>.type}
 required: p2.t0764.NodeAlias[p2.t0764.NodeAlias[A]]
    (which expands to)  p2.t0764.Node{type T = p2.t0764.Node{type T = A}}
      private[this] def f2 = new Main1[NodeAlias[A]](v.prepend)          // fail
                                                       ^
t0764b.scala:50: error: type mismatch;
 found   : p2.t0764.Node{type T = p2.t0764.<refinement>.type}
 required: p2.t0764.NodeAlias[p2.t0764.Node{type T = A}]
    (which expands to)  p2.t0764.Node{type T = p2.t0764.Node{type T = A}}
      private[this] def f3 = new Main1[Node { type T = A }](v.prepend)   // fail
                                                              ^
t0764b.scala:55: error: type mismatch;
 found   : p2.t0764.Node{type T = p2.t0764.<refinement>.type}
 required: p2.t0764.Node{type T = p2.t0764.Node{type T = A}}
      private[this] def f1 = new Main2(v.prepend)                        // fail
                                         ^
t0764b.scala:56: error: type mismatch;
 found   : p2.t0764.Node{type T = p2.t0764.<refinement>.type}
 required: p2.t0764.Node{type T = p2.t0764.NodeAlias[A]}
    (which expands to)  p2.t0764.Node{type T = p2.t0764.Node{type T = A}}
      private[this] def f2 = new Main2[NodeAlias[A]](v.prepend)          // fail
                                                       ^
t0764b.scala:57: error: type mismatch;
 found   : p2.t0764.Node{type T = p2.t0764.<refinement>.type}
 required: p2.t0764.Node{type T = p2.t0764.Node{type T = A}}
      private[this] def f3 = new Main2[Node { type T = A }](v.prepend)   // fail
                                                              ^
11 errors found
